--- a/react-app/src/css/contact.css
+++ b/react-app/src/css/contact.css
@@ -62,6 +62,15 @@
   display: flex;
   justify-content: center;
   cursor: pointer;
+  gap: 12px;
+}
+
+.socials-container img {
+  height: 25px;
+}
+
+.socials-container img:nth-child(2) {
+  height: 27px;
 }
 
 .socials-container img:hover {
@@ -84,10 +93,21 @@
   background-color: rgb(218, 215, 215);
 }
 
+.feedback-form-container form textarea:hover {
+  border: 1.5px solid darkblue;
+}
+
+.feedback-form-container form textarea:focus {
+  outline: none;
+  border: none;
+}
+
 .feedback-form-container form button {
   margin-top: 10px;
   padding: 7px 5px;
-  width: auto;
+  width: 180px;
+  display: block;
+  align-self: center;
   cursor: pointer;
   border-radius: 10px;
   border: none;
