--- a/react-app/src/css/header.css
+++ b/react-app/src/css/header.css
@@ -38,11 +38,12 @@ html {
 .header-nav-links {
   display: flex;
   list-style-type: none;
+  padding-left: 100px;
 }
 
 .header-nav-links li a {
   text-decoration: none;
-  margin: 10px;
+  margin: 12px;
   font-size: 20px;
   font-weight: 400;
   color: black;
