--- a/react-app/src/css/certificate.css
+++ b/react-app/src/css/certificate.css
@@ -32,32 +32,24 @@
 }
 
 .certificates-container {
-  width: 60%;
+  width: auto;
   height: auto;
-  overflow-x: auto;
-  white-space: nowrap;
-  scrollbar-width: thin;
+
   display: flex;
   gap: 30px;
   padding: 20px;
   border: 1px solid rgb(99, 97, 97);
   border-radius: 20px;
   box-shadow: 0px 0px 10px rgb(150, 147, 147);
-
   scroll-behavior: smooth;
 }
 
 .certificates-container img {
-  width: 350px;
-  height: 350px;
+  width: 300px;
+  height: 300px;
   border: 1px solid rgb(66, 64, 64);
   border-radius: 10px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-}
-
-.certificates-container img:hover {
-  transform: scale(1.05);
-  transition: all 0.3s;
 }
 
 .right-arrow,
@@ -74,4 +66,32 @@
 .left-arrow:hover,
 .right-arrow:hover {
   opacity: 0.7;
+}
+
+.pagination {
+  display: flex;
+  justify-content: center;
+  margin-top: 15px;
+}
+
+.pagination button {
+  background-color: transparent;
+  border: 1.4px solid rgb(173, 170, 170);
+  /* padding: 8px 12px; */
+  padding: 3px 8px;
+  margin: 0 5px;
+  cursor: pointer;
+  border-radius: 50%;
+  transition: background-color 0.3s ease, transform 0.2s ease;
+}
+
+.pagination button.active {
+  background-color: #6aaf08;
+  color: white;
+  /* border-color: #6aaf08; */
+  border: none;
+}
+
+.pagination button:hover {
+  background-color: #ddd;
 }
