--- a/react-app/src/css/header.css
+++ b/react-app/src/css/header.css
@@ -38,7 +38,8 @@ html {
 .header-nav-links {
   display: flex;
   list-style-type: none;
-  padding-left: 100px;
+  /* padding-left: 100px; */
+  margin-right: 60px;
 }
 
 .header-nav-links li a {
