--- a/react-app/src/css/profile.css
+++ b/react-app/src/css/profile.css
@@ -5,6 +5,12 @@
   display: flex;
   justify-content: space-evenly;
   align-items: center;
+  opacity: 0;
+  transition: opacity 1s ease-in-out;
+}
+
+#profile.visible {
+  opacity: 1;
 }
 
 .profile-pic-container {
@@ -18,6 +24,7 @@
   height: 100%;
   border-radius: 50%;
 }
+
 .profile-pic-container:hover {
   transform: scale(1.1);
   transition: all 0.3s;
@@ -41,6 +48,7 @@
   justify-content: center;
   align-items: center;
 }
+
 .profile-text p {
   font-weight: 600;
   color: rgb(110, 105, 105);
@@ -51,6 +59,13 @@
   font-weight: 600;
   margin-bottom: 20px;
   white-space: nowrap;
+  overflow: hidden; /* Make sure it doesn't overflow */
+  border-right: 2px solid white;
+  width: 0; /* Make it initially hidden */
+}
+
+.typing-visible {
+  animation: typing 3s steps(30, end) forwards;
 }
 
 @keyframes typing {
@@ -62,13 +77,6 @@
   }
 }
 
-.typing {
-  overflow: hidden;
-  white-space: nowrap;
-  border-right: 2px solid white;
-  width: 0;
-  animation: typing 3s steps(30, end) forwards;
-}
 .profile-text h2 {
   color: rgb(99, 96, 96);
   font-size: 30px;
@@ -88,9 +96,7 @@
   padding: 15px;
   border: none;
   border-radius: 25px;
-  /* margin: 10px auto; */
   color: white;
-  /* background-color: #0d64f0; */
   background-color: #007bff;
   font-size: 13px;
   font-weight: 400;
@@ -101,7 +107,6 @@
   color: white;
   transition: all 0.4s ease-in-out;
   cursor: pointer;
-  border: none;
 }
 
 .profile-btn-container button:nth-child(2) {
