--- a/react-app/src/css/project.css
+++ b/react-app/src/css/project.css
@@ -5,6 +5,11 @@
   flex-direction: column;
   align-items: center;
   position: relative;
+  transition: opacity 1s ease-in-out;
+}
+
+#projects.visible {
+  opacity: 1;
 }
 
 #projects p {
@@ -19,22 +24,47 @@
   font-weight: 600;
   white-space: nowrap;
   margin-bottom: 40px;
+  overflow: hidden;
+}
+
+.typing-visible {
+  animation: typing 2s steps(30, end) forwards;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
 }
 
 .projects-container {
   border: 1px solid rgb(99, 97, 97);
   border-radius: 20px;
-  width: 60%;
+  width: 70%;
   box-shadow: 0px 0px 10px rgb(150, 147, 147);
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
+  padding: 20px;
+  gap: 30px;
 }
 .project-container {
+  display: grid;
+  grid-template-columns: 1fr auto 1fr;
+  gap: 20px;
+  align-items: center;
+  justify-content: center;
   text-align: center;
+  border: 1.3px solid;
+  border-radius: 20px;
+  padding: 20px;
 }
-.project-container img {
+
+.project-img-container img {
   width: 100%;
   margin: 10px auto;
   border: 1px solid rgb(99, 97, 97);
@@ -42,7 +72,7 @@
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.project-container button {
+.project-img-container button {
   padding: 10px;
   border-radius: 25px;
   margin: 10px auto;
@@ -56,15 +86,15 @@
   margin-right: 10px;
 }
 
-.project-container :last-child {
+.project-img-container :last-child {
   background-color: #28a745;
 }
 
-.project-container :last-child:hover {
+.project-img-container :last-child:hover {
   background-color: #328044;
 }
 
-.project-container button:hover {
+.project-img-container button:hover {
   background-color: black;
   color: white;
   transition: all 0.5s;
@@ -72,7 +102,39 @@
   border: none;
 }
 
-.project-container {
-  width: 80%;
-  margin-top: 15px;
+.project-container:last-of-type .project-details-container {
+  height: auto;
+}
+
+.project-details-container {
+  border: 1px solid rgb(99, 97, 97);
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgb(61, 60, 60);
+  height: auto;
+  margin-top: -87px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 10px;
+}
+
+.project-details-container ul {
+  list-style-position: outside;
+  padding-left: 20px;
+  margin: 0;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+.project-details-container li {
+  font-size: 14px;
+  margin: 0;
+  text-align: left;
+}
+
+.image-arrow-icon {
+  height: 50px;
+  margin-top: -75px;
+  width: 70px;
 }
