--- a/react-app/src/css/welcomeModal.css
+++ b/react-app/src/css/welcomeModal.css
@@ -9,9 +9,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  margin-top: -40px;
-  z-index: 1000;
-  /* animation: fadeIn 0.3s forwards; */
+  z-index: 1100;
 }
 
 /* Modal Container */
@@ -26,20 +24,39 @@
   animation: slideDown 1s ease-out; /*smooth during slide down*/
 }
 
+.wave {
+  display: inline-block;
+  animation: wave-animation 0.5s infinite alternate;
+}
+
+@keyframes wave-animation {
+  0% {
+    transform: rotate(0deg);
+  }
+
+  100% {
+    transform: rotate(20deg); /* Rotate left */
+  }
+}
+
 .modal-close {
   position: absolute;
-  top: 10px;
   right: 10px;
-  background: none;
+  top: 5px;
+  background-color: rgba(0, 0, 0, 0.2);
   border: none;
-  font-size: 20px;
+  height: 17px;
+  width: 20px;
+  border-radius: 50%;
+  font-size: 14px;
   cursor: pointer;
-  color: #666;
-  transition: color 0.2s;
+  color: rgb(72, 70, 70);
+  box-shadow: 0px 0px 5px black;
 }
 
 .modal-close:hover {
-  color: #000;
+  transform: scale(1.1);
+  transition: all 0.3s ease-in-out;
 }
 
 /* Animations */
