--- a/react-app/src/css/footer.css
+++ b/react-app/src/css/footer.css
@@ -16,6 +16,12 @@ body {
   text-align: center;
 }
 
+#dark #footer,
+#dark #footer nav div {
+  background-color: rgb(35, 34, 34);
+  box-shadow: 0px 0px 8px white;
+  color: white;
+}
 #footer p {
   margin-bottom: 10px;
 }
