--- a/react-app/src/css/header.css
+++ b/react-app/src/css/header.css
@@ -5,7 +5,11 @@
 
 body {
   width: 100%;
-  background-color: #f9f9f9;
+  /* background-color: #f9f9f9; */
+}
+
+#dark {
+  background-color: black;
 }
 
 html {
@@ -20,6 +24,11 @@ html {
   z-index: 1000;
 }
 
+#dark #header {
+  background-color: black;
+  box-shadow: 0px 0px 10px white;
+}
+
 #desktop-nav {
   display: flex;
   justify-content: space-around;
@@ -28,18 +37,10 @@ html {
   width: 100%;
 }
 
-.logo {
-  color: black;
-  font-size: 40px;
-  font-weight: 600;
-  white-space: nowrap;
-}
-
 .header-nav-links {
   display: flex;
   list-style-type: none;
-  /* padding-left: 100px; */
-  margin-right: 60px;
+  margin-right: -90px;
 }
 
 .header-nav-links li a {
@@ -51,6 +52,15 @@ html {
   border: 1.4px solid;
   padding: 7px;
   border-radius: 15px;
+}
+
+#dark .header-nav-links li a {
+  color: white;
+}
+
+#dark .header-nav-links li a:hover {
+  background-color: white;
+  color: black;
 }
 
 .header-nav-links li a:hover {
