--- a/react-app/src/css/profile.css
+++ b/react-app/src/css/profile.css
@@ -31,10 +31,17 @@
   box-shadow: 0px 0px 10px black;
 }
 
+#dark .profile-pic-container:hover {
+  box-shadow: 0px 0px 10px white;
+}
+
 .profile-pic-container:hover + .profile-about-container {
   box-shadow: none;
 }
 
+#dark .profile-pic-container:hover + .profile-about-container {
+  box-shadow: none;
+}
 .profile-about-container {
   border: 1.3px solid;
   border-radius: 30px;
@@ -49,6 +56,13 @@
   align-items: center;
 }
 
+#dark .profile-about-container {
+  border: 1px solid white;
+  background-color: rgb(35, 34, 34);
+  box-shadow: 0px 0px 10px white;
+  color: white;
+}
+
 .profile-text p {
   font-weight: 600;
   color: rgb(110, 105, 105);
@@ -59,8 +73,7 @@
   font-weight: 600;
   margin-bottom: 20px;
   white-space: nowrap;
-  overflow: hidden; /* Make sure it doesn't overflow */
-  border-right: 2px solid white;
+  overflow: hidden;
   width: 0; /* Make it initially hidden */
 }
 
@@ -117,4 +130,12 @@
   background-color: rgb(86, 86, 25);
   cursor: pointer;
   transition: all 0.4s ease-in-out;
+}
+
+#light {
+  background-color: white;
+}
+
+#dark {
+  background-color: black !important;
 }
