--- a/react-app/src/css/project.css
+++ b/react-app/src/css/project.css
@@ -28,6 +28,13 @@
   overflow: hidden;
 }
 
+#dark #projects h1 {
+  color: white;
+}
+
+#dark #projects p {
+  color: white;
+}
 .typing-visible {
   animation: typing 2s steps(30, end) forwards;
 }
