--- a/react-app/src/css/welcomeModal.css
+++ b/react-app/src/css/welcomeModal.css
@@ -19,9 +19,10 @@
   border-radius: 10px;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.2);
   width: 400px;
+  margin-top: -100px;
   text-align: center;
   position: relative;
-  animation: slideDown 1s ease-out; /*smooth during slide down*/
+  animation: slideDown 1s ease-out;
 }
 
 .wave {
@@ -38,19 +39,34 @@
     transform: rotate(20deg); /* Rotate left */
   }
 }
+.welcome-text {
+  overflow: hidden;
+  white-space: nowrap;
+  display: inline-block;
+  width: 0;
+  animation: typing 2s steps(40, end) forwards infinite;
+}
+
+@keyframes typing {
+  from {
+    width: 0;
+  }
+  to {
+    width: 100%;
+  }
+}
 
 .modal-close {
   position: absolute;
-  right: 10px;
-  top: 5px;
-  background-color: rgba(0, 0, 0, 0.2);
+  right: -15px;
+  top: -30px;
+  background-color: transparent;
   border: none;
-  height: 17px;
+  height: 19px;
   width: 20px;
   border-radius: 50%;
   font-size: 14px;
   cursor: pointer;
-  color: rgb(72, 70, 70);
   box-shadow: 0px 0px 5px black;
 }
 
