new changes are made

--- a/react-app/src/css/mediaqueries.css
+++ b/react-app/src/css/mediaqueries.css
@@ -95,11 +95,10 @@
     margin: 5px;
     padding: 0;
   }
-
-  .search-bar-container {
-  }
-
   .search-container {
+    position: absolute;
+    left: 18%;
+    top: 28%;
   }
 }
 
